# bananaforscale

./: Init.py  InitGui.py  LICENSE-Assets  LICENSE-Code  README.md  banana_command.py  package.xml  pyproject.toml
Resources/Models/: can.stl
freecad/BananaForScale/: banana_command.py  can_command.py  init_gui.py
