[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "BananaForScale"
version = "0.1.0"
description = "Adds a banana for scale to FreeCAD"
readme = "README.md"
license = {file = "LICENSE-Code"}
authors = [
  {name = "Fabio Tavernini", email = "FabioTavernini@proton.me"}
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["freecad*"]
